--- a/pages/magento2/magento2_landing_page.html
+++ b/pages/magento2/magento2_landing_page.html
@@ -1,10 +1,10 @@
 ---
-title: Product 1
-keywords: mydoc
-sidebar: product1_sidebar
+title: Magento2 Articles
+keywords: magento2
+sidebar: magento2_sidebar
 toc: false
-permalink: p1_landing_page.html
-folder: product1
+permalink: magento2_landing_page.html
+folder: magento2
 ---
 <div class="row">
         <div class="col-lg-12">
